--- a/home.html
+++ b/home.html
@@ -11,8 +11,13 @@
     </style>
 </head>
 <body>
-    <nav class = "navBar">
-        <a href=""
-    </nav>
+    <header>
+        <nav class = "navBar">
+            <a href="home.html">Home</a>
+            <a href="feedback.html">Feedback</a>
+            <a href="feedback.html">Feedback</a>
+        </nav>
+        <!-- https://www.tutorialrepublic.com/codelab.php?topic=html5&file=header-tag -->
+    </header>
 </body>
 </html>
