--- a/feedback.html
+++ b/feedback.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>Feedback</title>
     <style>
         .navBar {
             display: flex;
+        }
+        fieldset {
+            border: 5px solid black;
         }
     </style>
 </head>
@@ -19,7 +22,7 @@
         </nav>
         <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Feedback</h1>
     </header>
-    <section>
+    <section style = "text-align: center;">
         <p>Please provide feedback by answering the questions below. It's not required but it will greatly help me know where I can improve</p>
         <fieldset>
             Did you enjoy using this website?<br>
@@ -49,6 +52,7 @@
             </label>
             <!-- https://www.w3schools.com/html/html_forms.asp -->
         </fieldset>
+        <input type="submit"> This does not work BTW
     </section>
 </body>
 </html>
