--- a/home.html
+++ b/home.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
     <style>
-        .navBar {
-            display: flex;
-        }
+        
+        
     </style>
 </head>
 <body>
@@ -19,5 +18,8 @@
         </nav>
         <!-- https://www.tutorialrepublic.com/codelab.php?topic=html5&file=header-tag -->
     </header>
+    <section>
+        <h1 style="text-align: center;">HOME PAGE</h1>
+    </section>
 </body>
 </html>
