--- a/home.html
+++ b/home.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
+    <link rel="stylesheet" href="styles\style.css">
     <style>
-        
         
     </style>
 </head>
 <body>
     <header>
-        <nav class = "navBar">
-            <a href="home.html">Home</a>
-            <a href="feedback.html">Feedback</a>
-            <a href="feedback.html">Feedback</a>
+        <nav>
+            <ul>
+                <li><a class="active" href="home.html">Home</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
         </nav>
         <!-- https://www.tutorialrepublic.com/codelab.php?topic=html5&file=header-tag -->
     </header>
     <section>
         <h1 style="text-align: center;">HOME PAGE</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/I-64.svg/1200px-I-64.svg.png">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/I-64.svg/1200px-I-64.svg.png"> 
     </section>
 </body>
 </html>
