--- a/feedback.html
+++ b/feedback.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
+    <link rel="stylesheet" href="styles\style.css">
     <style>
-        .navBar {
-            display: flex;
-        }
         fieldset {
             border: 5px solid black;
         }
@@ -15,10 +13,12 @@
 </head>
 <body>
     <header>
-        <nav class = "navBar">
-            <a href="home.html">Home</a>
-            <a href="feedback.html">Feedback</a>
-            <a href="feedback.html">Feedback</a>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+                <li><a class="active" href="feedback.html">Feedback</a></li>
+            </ul>
         </nav>
         <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Feedback</h1>
     </header>
