--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
     <title>Main</title>
     <link rel="stylesheet" href="styles\style.css">
     <style>
-        
     </style>
 </head>
 <body>
@@ -17,11 +16,11 @@
                 <li><a href="feedback.html">Feedback</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
+            <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">HOME PAGE</h1>
         </nav>
         <!-- https://www.tutorialrepublic.com/codelab.php?topic=html5&file=header-tag -->
     </header>
     <section>
-        <h1 style="text-align: center;">HOME PAGE</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/I-64.svg/1200px-I-64.svg.png">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/I-64.svg/1200px-I-64.svg.png"> 
     </section>
