--- a/feedback.html
+++ b/feedback.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
+                <li><a href="team.html">Team</a></li>
                 <li><a class="active" href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
