--- a/team.html
+++ b/team.html
@@ -6,15 +6,12 @@
     <title>Team</title>
     <link rel="stylesheet" href="styles\style.css">
     <style>
-        .cotainer {
+        .container {
             display: flex;
+            object-fit: fit;
         }
-        .boxes {
-            border: .1px solid;
-            width: 99px;
-            height: 99px;
-            text-align: center;
-            font-size: 30px;
+        .offPlayers {
+            border: 1px solid black;
         }
     </style>
 </head>
@@ -33,8 +30,23 @@
         </header>
         <section>
             <div class="container">
-                <div class="players"
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/sda0iqxxiky1f7apq351.jpg" alt="Bryce Young" width="100%" height="100%"></div>
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/xs2a1bhrqmccmoj8cpan.jpg" alt="Chuba Hubbard" width="100%" height="100%"></div>
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/pi0jrgskoeg8drowud3x.jpg" alt="Bryce Young" width="100%" height="100%"></div>
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/epzzd7szxct1bebatwin.jpg" alt="Bryce Young" width="100%" height="100%"></div>
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/epzzd7szxct1bebatwin.jpg" alt="Bryce Young" width="100%" height="100%"></div>
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/ems6qlkmbzfhfnfaxpjw.jpg" alt="Bryce Young" width="100%" height="100%"></div>
             </div>
+            <table>
+                <tr>
+                    <th>Offensive Players</th>
+                </tr>
+                <tr>
+                    <td>QB</td>
+                    <td>Bryce Young</td>
+                </tr>
+                    <td>Bryce Young</td>
+            </table>
         </section>
     </body>
 </body>
