--- a/pages/team.html
+++ b/pages/team.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team</title>
-    <link rel="stylesheet" href="styles\style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <style>
-        .container {
-            display: flex;
-            object-fit: fit;
-            margin-bottom: 20px;
-        }
+        
         .offPlayers {
             border: 1px solid black;
         }
@@ -36,7 +31,6 @@
             font-family: Arial, Helvetica, sans-serif;
             color: #0085CA;
         }
-
         .offTitle {
             margin-top: 40px;
         }
@@ -47,13 +41,13 @@
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
-                    <li><a class="active" href="team.html">Team</a></li>
-                    <li><a href="feedback.html">Feedback</a></li>
+                    <li><a class="active" href="pages\team.html">Team</a></li>
+                    <li><a href="pages\feedback.html">Feedback</a></li>
                 </ul>
-                <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">THE TEAM</h1>
             </nav>
             <!-- https://www.tutorialrepublic.com/codelab.php?topic=html5&file=header-tag -->
         </header>
+        <h1>THE TEAM</h1>
         <section>
             <h2 class = "offTitle">Offensive Starters</h2>
             <div class="container">
