--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -30,9 +30,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="team.html">Team</a></li>
-                <li><a class="active" href="feedback.html">Feedback</a></li>
+                <li><a href="/home.html">Home</a></li>
+                <li><a href="/pages/team.html">Team</a></li>
+                <li><a class="active" href="/pages/feedback.html">Feedback</a></li>
             </ul>
         </nav>
         <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Feedback</h1>
