--- a/pages/team.html
+++ b/pages/team.html
@@ -34,15 +34,21 @@
         .offTitle {
             margin-top: 40px;
         }
+        .container {
+            display: flex;
+            object-fit: fit;
+            margin-bottom: 20px;
+        }
+
     </style>
 </head>
 <body style="background-color: silver;">
         <header>
             <nav>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a class="active" href="pages\team.html">Team</a></li>
-                    <li><a href="pages\feedback.html">Feedback</a></li>
+                    <li><a href="/home.html">Home</a></li>
+                    <li><a class="active" href="/pages/team.html">Team</a></li>
+                    <li><a href="/pages/feedback.html">Feedback</a></li>
                 </ul>
             </nav>
             <!-- https://www.tutorialrepublic.com/codelab.php?topic=html5&file=header-tag -->
