--- a/pages/team.html
+++ b/pages/team.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team</title>
     <link rel="stylesheet" href="/styles/style.css">
     <style>
         
@@ -51,7 +52,6 @@
                     <li><a href="/pages/feedback.html">Feedback</a></li>
                 </ul>
             </nav>
-            <!-- https://www.tutorialrepublic.com/codelab.php?topic=html5&file=header-tag -->
         </header>
         <h1>THE TEAM</h1>
         <section>
