--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -15,6 +15,7 @@
 
         p {
             font-family: Arial, Helvetica, sans-serif;
+            font-size: large;
         }
 
         section {
@@ -23,6 +24,18 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+        }
+
+        #submit {
+            background-color: white;
+            color: #333;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: x-large;
+        }
+        #submit:hover {
+            background-color: #0085CA;
+            color: white;
+            transition: 0.5s;
         }
     </style>
 </head>
@@ -41,6 +54,7 @@
         <p>Please provide feedback by answering the questions below. It's not required but it will greatly help me know where I can improve</p>
         <fieldset>
             Did you enjoy using this website?<br>
+
             <label for="radio">Yes
                 <input type="radio" name="radio" id="radio1" />
             </label>
@@ -48,6 +62,22 @@
                 <input type="radio" name="radio" id="radio1" />
             </label>
         </fieldset>
+
+        <fieldset>
+            <form action="#">
+                <label>Please give this website a grade:</label>
+                <select name="grade">
+                  <option value="select">Select</option>
+                  <option value="volvo">A</option>
+                  <option value="saab">B</option>
+                  <option value="fiat">C</option>
+                  <option value="fiat">D</option>
+                  <option value="fiat">F</option>
+                </select>
+              
+        </fieldset>
+
+
         <fieldset>
             What page did enjoy the most?<br>
             <label for="checkbox">The Home Page</label>
@@ -60,14 +90,15 @@
                 <input type="checkbox" name="checkbox" id="checkbox1">
             </label>
         </fieldset>
+
         <fieldset>
             Please provide any additional comments <br>
             <label for="comments">Enter here:</label>
                 <input type="text" id="comments" name="comments"><br>
             </label>
-            <!-- https://www.w3schools.com/html/html_forms.asp -->
         </fieldset>
-        <input type="submit">
+
+        <input id = "submit" type="submit">
     </section>
 </body>
 </html>
