--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 
         <h1>PANTHER'S STADIUM</h1>
         <h2 style="text-align: center;">Bank Of America Stadium</h2>
-        <p>Located in Charlotte, NC </p>
+        <p>Located on 800 S Mint St in Charlotte, NC </p>
         <div class="stadiumContainer">
                 <div id="stadium"><img src="https://www.momspumphere.com/components/com_jplaces/files/images/407531632bank-of-america-stadium_charlotte-north-carolina_breastfeeding-nursing-mothers-lactation-room_outdoor-view.jpg" alt="Front of Stadium" width="100%" height="100%"></div>
                 <div id="stadium"><img src="https://upload.wikimedia.org/wikipedia/commons/0/09/BofAStadium2015.JPG" alt="Inside of Stadium" width="100%" height="100%"></div>
