--- a/pages/team.html
+++ b/pages/team.html
@@ -14,6 +14,9 @@
         .defPlayers {
             border: 1px solid black
         }
+        .specialTeams {
+            border: 1px solid black
+        }
 
         table {
             justify-content: center;
@@ -60,8 +63,8 @@
                 <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/sda0iqxxiky1f7apq351.jpg" alt="Bryce Young" width="100%" height="100%"></div>
                 <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/xs2a1bhrqmccmoj8cpan.jpg" alt="Chuba Hubbard" width="100%" height="100%"></div>
                 <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/pi0jrgskoeg8drowud3x.jpg" alt="Dionte Johnson" width="100%" height="100%"></div>
-                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/epzzd7szxct1bebatwin.jpg" alt="Jordon Matthews" width="100%" height="100%"></div>
-                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/ems6qlkmbzfhfnfaxpjw.jpg" alt="Bryce Young" width="100%" height="100%"></div>
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/hwxxnemgpl16sk5mn8mw.jpg" alt="Tommy Tremble" width="100%" height="100%"></div>
+                <div class="offPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/l9sewjrin1nmgezty0eg.jpg" alt="Ikem Ekwonu" width="100%" height="100%"></div>
             </div>
             
             <table>
@@ -113,11 +116,11 @@
             <hr>
             <h2>Defensive Starters</h2>
             <div class="container">
-                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/kzlydzbjdydbtnfwzg0y.jpg" alt="Jordan Fuller" width="100%" height="100%"></div>
-                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/gwlhbxua2hguvbnilih7.jpg" alt="Jadeveon Clowney" width="100%" height="100%"></div>
-                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/qx1qwnjswws43onmsqa9.jpg" alt="Derrick Brown" width="100%" height="100%"></div>
-                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/uymnwvgq9obkxkt9pe8t.jpg" alt="Jaycee Horn" width="100%" height="100%"></div>
+                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/m18kedl6fzjbvvq3kilw.jpg" alt="A'Shawn Robinson" width="100%" height="100%"></div>
+                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/s01ndqhm5sndpsxnoqao.jpg" alt="Shy Tuttle" width="100%" height="100%"></div>
                 <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_6_desktop/f_auto/panthers/ghq61lrpd7glllzubg9x.jpg" alt="Shaq Thompson" width="100%" height="100%"></div>
+                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/nxmqiefo4zmxtjrcx8zk.jpg" alt="Jaycee Horn" width="100%" height="100%"></div>
+                <div class="defPlayers"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/ozj3dhzfjf4p355wfk0q.jpg" alt="Jordan Fuller" width="100%" height="100%"></div>
             </div>
             <table>
                 <tr>
@@ -139,8 +142,8 @@
                 </tr>
                 <tr>
                     <td><strong>CB</strong></td>
-                    <td>Michael Jackson</td>
                     <td>Jaycee Horn</td>
+                    <td>Michael Jackson</td>
                     <td>Troy Hill</td>
                 </tr>
                 <tr>
@@ -149,7 +152,39 @@
                     <td>Xavier Woods</td>
                 </tr>
             </table>
-            <hr> 
+            <hr>
+            <h2>Special Teams</h2>
+            <div class="container">
+                <div class="specialTeams"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/gwhjqmtykf6kjopugvgw.jpg" alt="Eddy Pineiro" width="100%" height="100%"></div>
+                <div class="specialTeams"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/wsafxqqes5k9cyidtjcz.jpg" alt="Johnny Hekker" width="100%" height="100%"></div>
+                <div class="specialTeams"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/tok8j0uvqvu7qkj1gspm.jpg" alt="Raheem Blackshear" width="100%" height="100%"></div>
+                <div class="specialTeams"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/svj1hsl8x09rh2eglnpb.jpg" alt="David Moore" width="100%" height="100%"></div>
+                <div class="specialTeams"><img src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_6_desktop/f_auto/panthers/ktv0cmn5ftecsve2rgb4.jpg" alt="JJ Jansen" width="100%" height="100%"></div>
+            </div> 
+            <table>
+                <tr>
+                    <td><strong>K</strong></td>
+                    <td>Eddy Pineiro</td>
+                </tr>
+                <tr>
+                    <td><strong>P</strong></td>
+                    <td>Johnny Hekker</td>
+                </tr>
+                <tr>
+                    <td><strong>PR</strong></td>
+                    <td>Raheem Blackshear</td>
+                    <td>David Moore</td>
+                </tr>
+                <tr>
+                    <td><strong>KR</strong></td>
+                    <td>Raheem Blackshear</td>
+                    <td>David Moore</td>
+                </tr>
+                <tr>
+                    <td><strong>LS</strong></td>
+                    <td>JJ Jansen</td>
+                </tr>
+            </table>
         </section>
 </body>
 </html>
